--- a/Views/Employee/Search.cshtml
+++ b/Views/Employee/Search.cshtml
@@ -7,12 +7,15 @@
 
 <div class="row">
     <div class="col-md-4">
-
+        
         @using (Html.BeginForm($"Details", "Employee", FormMethod.Post))
         {
-            <span>Enter Employee ID: </span>@Html.TextBox("id")<br />
+        <div class="form-group">
+            <span class="control-label">Enter Employee ID: </span>
+            @Html.TextBox("id")<br />
 
             <input id="Submit" type="submit" value="submit" />
+        </div> 
         }
 
     </div>
