--- a/Views/Employee/Index.cshtml
+++ b/Views/Employee/Index.cshtml
@@ -7,7 +7,10 @@
 
 <ul class="navbar-nav flex-grow-1">
     <li class="nav-item">
-        <a class="nav-link text-dark" asp-area="" asp-controller="Employee" asp-action="Search">View Employee Details</a>
+        <a class="nav-link text-dark" asp-area="" asp-controller="Employee" asp-action="All">View Employee Details</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link text-dark" asp-area="" asp-controller="Employee" asp-action="Search">Search Employee</a>
     </li>
     <li class="nav-item">
         <a class="nav-link text-dark" asp-area="" asp-controller="Employee" asp-action="Create">Create Employee</a>
